src/styles/core.scss
/**
 *
 * Copyright 2015 Google Inc. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

html, body {
  font-family: Arial;
  background: #FAFAFA;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  min-width: 320px;
  font-family: 'Roboto', Helvetica, sans-serif;
  font-weight: 400;
  color: #444;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html {
  overflow: hidden;
}

body {
  display: flex;
  flex-direction: column;
}

.app-container {
  overflow-x: hidden;
  overflow-y: scroll;
  padding-top: 56px;
  /* Not using will-change here because it creates a new initial containing
     block, which will stop any position: fixed children rendering correctly.
   */
  -webkit-overflow-scrolling: touch;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;

  &.locked {
    overflow-x: hidden;
    overflow-y: hidden;
  }
}

.app-header {
  width: 100%;
  height: 110px;
  overflow: hidden;

  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  transition: transform 150ms cubic-bezier(0,0,0.21,1);

  &::before {
    display: block;
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    width: 100%;
    height: 80px;
    background: #607D8B;
    transform: translateY(-24px);
    transition: transform 0.233s cubic-bezier(0,0,0.21,1);
    transform-origin: 0 0;
    box-shadow: 0 1px 1px 0 rgba(0,0,0,.14),
      0 2px 1px -2px rgba(0,0,0,.2),
      0 1px 3px 0 rgba(0,0,0,.12);
    will-change: transform;
    z-index: 0;
  }

  &.extended::before {
    transform: translateY(0);

    box-shadow: 0 4px 5px 0 rgba(0,0,0,.14),
        0 2px 9px 1px rgba(0,0,0,.12),0 4px 2px -2px rgba(0,0,0,.2);
  }

  &.collapsed {
    transition: transform 900ms cubic-bezier(0,0,0.21,1) 93ms;
    transform: translateY(-103%);
  }
}

.app-header__labels-container {
  width: 100%;
  max-width: 800px;
  padding: 0 16px;
  box-sizing: border-box;
  margin: 0 auto;
  height: 24px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  will-change: transform;
  transform: translateY(-24px);
  opacity: 0;
  z-index: 2;
  transition: transform 0.233s cubic-bezier(0,0,0.21,1),
      opacity 0.133s cubic-bezier(0,0,0.21,1);
}

.app-header.extended .app-header__labels-container {
  opacity: 1;
  transform: translateY(0);
  transition: transform 0.233s cubic-bezier(0,0,0.21,1),
      opacity 0.333s cubic-bezier(0,0,0.21,1) 0.08s;
}

.app-header__labels {
  color: #FFF;
  font-weight: 500;
  list-style: none;
  padding: 0;
  margin: 0;
  align-self: flex-end;
  height: 136px;
  width: 136px;
  transform: rotate(-90deg) translateX(136px) translateX(10px);
  transform-origin: 100% 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  &:first-of-type {
    visibility: hidden;
  }
}

.app-header__labels-inner-container {
  flex: 1;
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100%;
  justify-content: space-between;
}

.app-header__title {
  font-weight: 400;
  font-size: 20px;
  margin: 0 0 0 16px;
  line-height: 56px;
  color: #FFF;
  z-index: 1;
  position: relative;
}

.app-main {
  flex: 1;
  width: 100%;
  max-width: 800px;
  margin: 24px auto 0 auto;
  display: flex;
  flex-direction: column;
  position: relative;
}

.app-main__properties,
.app-main__property,
.app-main__property-state,
.app-main__property-condition,
.app-main__property-engine,
.app-main__engine-labels {
  margin: 0;
  padding: 0;
  list-style: none;
}

.app-main__property-link {
  text-decoration: none;
  display: block;
  outline: none;

  &:focus {
    background: #F0F0F0;
  }
}

.app-main__engines {
  height: 100px;
  display: flex;
  flex-direction: row;
}

.app-main__engine-legend-container {
  flex: 1;
  display: flex;
  align-items: flex-end;

  &.up {
    transform: translateY(-16px);
  }
}

.app-main__engine-legend {
  font-weight: 500;
  font-size: 14px;
  list-style: none;
  margin: 0;
  padding: 0 16px 14px 16px;
  line-height: 0.6;
}

.app-main__engine-legend-item {
  padding-top: 0.8em;

  &::before {
    content: '';
    display: inline-block;
    vertical-align: baseline;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    margin-right: 0.4em;
  }
}

.app-main__engine-legend-item-layout::before {
  background-color: rgba(144,137,228,1);
}

.app-main__engine-legend-item-paint::before {
  background-color: rgba(144,170,101,1);
}

.app-main__engine-legend-item-composite::before {
  background-color: rgba(69,95,21,1);
}

.app-main__engine-labels-container {
  flex: 1;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0 16px;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.app-main__engine-labels {
  height: 136px;
  width: 136px;
  transform: rotate(-90deg) translateX(100%) translateX(36px) translateX(14px);
  transform-origin: 100% 100%;
  font-weight: 500;
  font-size: 15px;
  color: #9E9E9E;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.app-main__engine-labels:first-of-type {
  visibility: hidden;
}

.app-main__engine-labels-item {
  line-height: 24px;
}

.app-main__property {
  border-top: 1px solid #EBEBEB;
  background: #FFF;
  box-shadow: 0 6px 2px rgba(0,0,0,.12),
    0 2px 4px rgba(0,0,0,.24);
}
/* ... */

